--- a/model-login/src/main/res/layout/login_activity_main.xml
+++ b/model-login/src/main/res/layout/login_activity_main.xml
@@ -4,7 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".ui.MainActivity">
+
+    <Button
+        android:id="@+id/btnToast"
+        style="@style/BtnStyle"
+        android:text="提示Toast"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:layout_width="wrap_content"
