--- a/model-login/src/main/res/layout/login_activity_main.xml
+++ b/model-login/src/main/res/layout/login_activity_main.xml
@@ -14,6 +14,14 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
+    <Button
+        android:id="@+id/btnTestAppInit"
+        style="@style/BtnStyle"
+        android:text="测试Application初始化了吗"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnToast"
+        tools:ignore="HardcodedText" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
