--- a/model-login/src/main/res/layout/login_activity_login.xml
+++ b/model-login/src/main/res/layout/login_activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.LoginActivity">
 
     <Button
         android:id="@+id/btnToast"
@@ -20,6 +20,14 @@
         android:text="测试Application初始化了吗"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnToast"
+        tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/btnTurnBack"
+        style="@style/BtnStyle"
+        android:text="携带数据返回"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnTestAppInit"
         tools:ignore="HardcodedText" />
 
     <TextView
