更新配置, 测试新增Activity的补丁能不能生成

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     <Button
         android:id="@+id/btnTurnToMineCenter"
         style="@style/BtnStyle"
-        android:text="跳转个人中心页面"
+        android:text="跳转新增页面"
         tools:ignore="HardcodedText" />
 
 </LinearLayout>
